# speech-keyboard

./: CMakeCache.txt  CMakeLists.txt  Makefile  PyAudio-test.py  README.md  VirtualKeyboard  cmake_install.cmake  cpp_alsa_audio_test_ubuntu  cpp_alsa_audio_test_ubuntu.cpp  speech_to_text_backend.py  style.css  test-audio.py  test_audio.base64  test_audio_payload.json  test_vosk.py
src/: CMakeCache.txt  keyboard.cpp  keyboard.h  keyboardbutton.cpp  keyboardbutton.h  keyboardentry.cpp  keyboardentry.h  main.cpp  speechtotextservice.cpp  speechtotextservice.h
